--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@next/eslint-plugin-next": "14.0.1",
     "next": "14.0.1",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "react-icons": "^4.11.0",
+    "recharts": "^2.9.0"
   },
   "devDependencies": {
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.43",
     "eslint": "8",
     "eslint-config-next": "14.0.1"
   }
